--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: cpp
 compiler:
   - gcc
 
+before_install:
+  - sudo apt-get update && sudo apt-get -y install automake
+
 script: ./configure && make install
 
 os:
